errors.txt
/home/adital2512/os/ex2/students/Compilation_Error_gets_10/error1.c: In function ‘main’:
/home/adital2512/os/ex2/students/Compilation_Error_gets_10/error1.c:5:5: error: expected declaration or statement at end of input
    5 |     printf("dfg");
      |     ^~~~~~
